@@ -1,0 +1,5 @@
+other/.settings/.
+other/.classpath
+other/.project
+other/target/.*
+resources/.*
